Update API Documentation links for consistency and accessibility

--- a/web/index.html
+++ b/web/index.html
@@ -81,7 +81,7 @@
       <nav class="menu-bar">
         <img src="/logo_vehicle.svg" alt="FakeAPI logo car sport" />
         <ul>
-          <li><a href="./documentation.html">API Documentation</a></li>
+          <li><a href="./rest.html">API Documentation</a></li>
           <li><a href="">More</a></li>
         </ul>
       </nav>
