--- a/web/rest.html
+++ b/web/rest.html
@@ -63,7 +63,7 @@
       <section class="option-docs">
         <span>About</span>
         <ul class="option-docs-list">
-          <li><a href="../introduction.html">Introduction</a></li>
+          <li><a href="http://localhost:6675/vehicles/web/introduction.html">Introduction</a></li>
         </ul>
         <span>Rest API</span>
         <ul class="option-docs-list">
