--- a/web/introduction.html
+++ b/web/introduction.html
@@ -25,7 +25,7 @@
           </div>
         </article>
         <ul>
-          <li><a href="./index.html">Vehicles</a></li>
+          <li><a href="/vehicles/web/index.html">Vehicles</a></li>
           <li><a href="">More</a></li>
         </ul>
       </section>
