--- a/web/rest.html
+++ b/web/rest.html
@@ -49,7 +49,7 @@
             </div>
           </article>
           <ul>
-            <li><a href="../index.html">Vehicles</a></li>
+            <li><a href="/vehicles/web/index.html">Vehicles</a></li>
             <li><a href="">More</a></li>
           </ul>
         </section>
